<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  >

    <LinearLayout
        style="@style/linearLayoutStyle">

        <TextView
            style="@style/textViewStyle.Title"
            android:text="@string/tab_hotel1"/>
        <ImageView
        style="@style/imgeViewStyle"
        android:src="@drawable/hotel1"
            android:layout_width="350dp"
            android:layout_height="270dp"
        />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/vermapa"
            android:textColor="@color/white"
            android:background="@color/wallet_dim_foreground_inverse_holo_dark"
            android:id="@+id/bmappant"/>
        <TextView
            style="@style/textViewStyle.Content"
            android:text="@string/deshotel1"/>
    </LinearLayout>

</FrameLayout>
</ScrollView>