<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:textColor="@color/cadetblue"
            style="@style/textViewStyle.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="270dp"
                        android:layout_height="270dp"
                        android:src="@drawable/libano"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="190dp"
                        android:layout_height="270dp"
                        android:src="@drawable/mapa"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <Button
                    style="@style/textViewStyle.Content"
                    android:textColor="@color/accent_material_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vermapa"
                    android:background="@color/wallet_dim_foreground_inverse_holo_dark"
                    android:id="@+id/bmapini"

                    />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:orientation="horizontal">
                <TextView
                    style="@style/textViewStyle.Content"
                    android:textColor="@color/cadetblue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Datosg"
                    />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:orientation="horizontal">
                <TextView
                    style="@style/textViewStyle.Content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/introduccion"
                    android:textColor="@color/wallet_dim_foreground_inverse_holo_dark"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:orientation="horizontal">
                <TextView
                    style="@style/textViewStyle.Content"
                    android:textColor="@color/wallet_dim_foreground_inverse_holo_dark"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/introduccion2"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:orientation="horizontal">
                <TextView
                    style="@style/textViewStyle.Content"
                    android:textColor="@color/wallet_dim_foreground_inverse_holo_dark"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/introduccion3"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="invisible"
                    android:text="fsdffdsfggss"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="0.8"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/hotel1"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/bares"
                        />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/turismo"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/libano1"

                        />



                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</FrameLayout>
    </ScrollView>
